iptables
# Generated by iptables-save v1.4.21 on Tue Jul 18 16:52:41 2017
*mangle
:PREROUTING ACCEPT [11022:1469876]
:INPUT ACCEPT [34943:5493448]
:FORWARD ACCEPT [1081:145647]
:OUTPUT ACCEPT [35065:20213788]
:POSTROUTING ACCEPT [36182:20371387]
:Freeshell - [0:0]
-A PREROUTING -j CONNMARK --restore-mark --nfmask 0xffffffff --ctmask 0xffffffff
-A PREROUTING -m mark ! --mark 0x0 -j ACCEPT
-A PREROUTING -m mark --mark 0x0 -j Freeshell
-A PREROUTING -j CONNMARK --save-mark --nfmask 0xffffffff --ctmask 0xffffffff
-A FORWARD -p tcp -m tcp --tcp-flags SYN,RST SYN -j TCPMSS --clamp-mss-to-pmtu
-A Freeshell -i enp5s0f0 -j MARK --set-xmark 0x1/0xffffffff
-A Freeshell -i fsbr -j MARK --set-xmark 0x2/0xffffffff
COMMIT
# Completed on Tue Jul 18 16:52:41 2017
# Generated by iptables-save v1.4.21 on Tue Jul 18 16:52:41 2017
*nat
:PREROUTING ACCEPT [1555:231197]
:INPUT ACCEPT [193:28190]
:OUTPUT ACCEPT [40:7619]
:POSTROUTING ACCEPT [40:7619]
-A POSTROUTING -s 10.70.0.0/16 ! -d 10.70.0.0/16 -j MASQUERADE
COMMIT
# Completed on Tue Jul 18 16:52:41 2017
# Generated by iptables-save v1.4.21 on Tue Jul 18 16:52:41 2017
*filter
:INPUT ACCEPT [288:50583]
:FORWARD ACCEPT [875:112636]
:OUTPUT ACCEPT [29405:16599325]
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -p gre -j ACCEPT
-A INPUT -p icmp -j ACCEPT
-A INPUT -i lo -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m tcp --dport 22 -j ACCEPT
-A OUTPUT -d 10.254.0.0/24 -o venet0 -j REJECT --reject-with icmp-port-unreachable
COMMIT
# Completed on Tue Jul 18 16:52:41 2017
